width overflow fix

--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body{
     padding: 0;
     margin: 0;
     font-family: 'Courier New', Courier, monospace;
+    overflow-x: hidden;
+    box-sizing: border-box;
 }
 a {
     color: #c4dce6;
